[fix][chore] Start parameter compatible JDK version(8-17)